--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.9.3",
+    "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.91",
     "@mui/material": "^5.9.1",
@@ -18,7 +19,10 @@
     "date-fns": "^2.29.0",
     "form-data": "^4.0.0",
     "formik": "^2.2.9",
+    "google-map-react": "^2.2.0",
     "history": "^5.3.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.5.25",
     "module_name": "^1.0.0",
     "next": "^12.2.3",
     "nprogress": "^0.2.0",
@@ -26,11 +30,13 @@
     "react": "^18.2.0",
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
+    "react-geocode": "^0.2.3",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
+    "xlsx": "^0.18.5",
     "yup": "^0.32.11"
   },
   "scripts": {
