--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@emotion/react": "^11.9.3",
     "@emotion/server": "^11.4.0",
     "@emotion/styled": "^11.9.3",
+    "@mapbox/geo-viewport": "^0.5.0",
     "@material-ui/core": "^4.12.4",
     "@mui/icons-material": "^5.8.4",
     "@mui/lab": "^5.0.0-alpha.91",
@@ -14,6 +15,7 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-native": "^0.69.6",
     "axios": "^0.27.2",
     "chart.js": "^3.8.0",
     "date-fns": "^2.29.0",
@@ -32,9 +34,13 @@
     "react-chartjs-2": "^4.3.1",
     "react-dom": "^18.2.0",
     "react-geocode": "^0.2.3",
+    "react-native": "^0.69.5",
+    "react-native-maps": "^1.3.1",
+    "react-native-maps-super-cluster": "^1.6.0",
     "react-perfect-scrollbar": "^1.5.8",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "supercluster": "^7.1.5",
     "uuid": "^8.3.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5",
